# ephemeral

./: .gitignore  Models_2D.py  Optimize_Functions.py  README.md  __main__.py  pyproject.toml  reading.py  reading_v2.py
ShellScripts/: hercules_moments_pipe.sh  sge_moments_pipe.sh
src/ephemeral/: Models_2D.py  __init__.py  __main__.py  predefined_models.py  reading.py
